[package]
name = "rust_columns"
version = "0.1.0"
authors = [ "Luis Merino <mail@luismerino.name> "]
edition = "2021"
description = "Open source terminal arcade game with audio - based off of the classic Sega 'Columns'"
homepage = ""
repository = ""
readme = "README.md"
keywords = [ "terminal", "game" ]
categories = [ "games", "command-line-utilities" ]
license = "MIT OR Apache-2.0"

[dependencies]
crossterm = "0.26.0"
rand = "0.8.5"
